# movies_app

./: .coverage  .env  .env.dev  Makefile  Readme.md  docker-compose.yaml  pyproject.toml  pytest.ini
app/: __init__.py  __main__.py  alembic.ini  constants.py
app/api/: middlewares.py
app/api/handlers/: actors.py  base.py  films.py
app/db/: __main__.py
app/db/alembic/: env.py
app/db/alembic/versions/: 2b5866ea0ac5_.py  3af1b6244814_.py  64914d7a8aa4_.py  793d91880b17_initial.py  7ef0b1ee5165_.py  bca575ec07c3_.py
app/models/: __init__.py  actor.py  film.py
app/schemas/: film.py
app/urls/: __init__.py  actor_urls.py  film_urls.py
app/utils/: argparse.py
messenger/: __main__.py
messenger/api/: app.py  middlewares.py  payloads.py
messenger/api/handlers/: actors.py  base.py  films.py
messenger/db/: __main__.py  schema.py
messenger/db/alembic/: env.py
messenger/db/alembic/versions/: 5f7f58346ab5_.py
messenger/models/: __init__.py  actor.py  film.py
messenger/schemas/: actor.py  film.py
messenger/urls/: __init__.py  actor_urls.py  film_urls.py
messenger/utils/: pg.py
movie_app/: __main__.py  alembic.ini
movie_app/api/: app.py  middlewares.py
movie_app/api/handlers/: __init__.py  actors.py  base.py  films.py
movie_app/db/: __main__.py  schema.py
movie_app/db/alembic/: env.py
movie_app/db/alembic/versions/: 2b5866ea0ac5_.py  3af1b6244814_.py  5f7f58346ab5_.py  64914d7a8aa4_.py  7ef0b1ee5165_.py  8e804cf7b95a_.py  b4a94e356e42_.py  c3b9c3a78d55_.py
movie_app/models/: __init__.py  actor.py  film.py
movie_app/schemas/: actor.py  film.py
movie_app/urls/: actor_urls.py  film_urls.py
movie_app/utils/: pg.py
tests/: conftest.py
tests/api/: test_actors_api.py  test_films_api.py  test_invalid_request.py  test_invalid_requests.py
tests/factories/: async_factory.py  film.py
tests/migrations/: test_stairway.py
